Updated the employee page

--- a/employee.html
+++ b/employee.html
@@ -36,6 +36,7 @@
                     <form  class="form-l1">
                         <div>
                             <label for="fname">Employee name</label><br>
+                             
                             <input type="text"  placeholder="Username">
                         </div>
                         <div>
@@ -52,11 +53,23 @@
                     <form class="form-l2">
                         <div>
                             <label for="fname">Role</label><br>
-                            <input type="text"  placeholder="Username">
+                            <select>
+                                <option value="1">Front-End</option>
+                                <option value="2">Back-End</option>
+                                <option value="3">Product Manager</option>
+                                <option value="4">Q & A</option>
+                              </select> 
+                            <!-- <input type="text"  placeholder="Username"> -->
                         </div>
                         <div>
                             <label for="fname">Status</label><br>
-                            <input type="text"  placeholder="Username">
+                            <select>
+                                <option value="1">Intern</option>
+                                <option value="2">Fresher</option>
+                                <option value="3">Senior Manager</option>
+                                <option value="4">Junior Manager</option>
+                              </select> 
+                            <!-- <input type="text"  placeholder="Username"> -->
                         </div>
                         <div>
                             <label for="fname">Experience</label><br>
@@ -75,8 +88,8 @@
                     </form> 
                     <div class="form-l4">
                         <form>
-                            <button>Create</button>
-                            <button>Cancel</button>
+                            <button class="b1">Create</button>
+                            <button class="b2">Cancel</button>
                         </form> 
                 </div>
             </div>
